fix: adjust text alignment for user profile name

--- a/final-project/styles/profile.css
+++ b/final-project/styles/profile.css
@@ -39,6 +39,7 @@
   font-size: 1.4rem;
   padding: 0;
   margin: 0;
+  text-align: left;
 }
 
 .user-info p {
@@ -122,6 +123,10 @@
     justify-content: center;
     text-align: center;
     box-shadow: 0, 0, 0, 0.1;
+  }
+
+  .user-info h2 {
+    text-align: center;
   }
 
   .profile-header a > i.fa-right-from-bracket::before {
